Task 1 and 2 on Worksheet 5a

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,10 @@ of the tamplate with {{body}} --}}
 </head>
  
     <header>
-      <img src="/images/logo.jpg" width="300px" alt="A lovely logo">
+        <a href = "/">
+            <img src="/images/murphy.jpg" width="200px" alt="A lovely logo">
+        </a>
+
    </header>
  
 <body>
