--- a/views/personlist.handlebars
+++ b/views/personlist.handlebars
@@ -6,3 +6,7 @@
     <li>{{this.name}}</li>
   {{/each}}
 </ul>
+
+{{!-- Worksheet 4   03/02/2021--}}
+<a href=/{{this.name}}>
+      {{this.name}}</a></li>
