--- a/views/personlist.handlebars
+++ b/views/personlist.handlebars
@@ -7,6 +7,13 @@
   {{/each}}
 </ul>
 
-{{!-- Worksheet 4   03/02/2021--}}
+{{!-- Worksheet 5a   09/02/2021--}}
 <a href=/{{this.name}}>
       {{this.name}}</a></li>
+
+{{!-- Task 4 part 2--}}
+<ul>
+  {{#each personlist}}
+    <li>{{this.name}}</li>
+  {{/each}}
+</ul>
