changed branch and created data.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,30 @@ of the tamplate with {{body}} --}}
 <html>
 
 <head>
-    <title>Covid Travel</title>
-    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="title" content="Frank's Shop">
+    <meta name="description" content="Frank's Shop is an official reseller of merch released by Singer Songwriter Frank Ocean, including Hoodies, Sweatpants, and vinyl pressings.">
+    <meta name="author" content="Andrew Jackson">
+    <title>Home - Foil Arms and Hog</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/custom.css">
+
+        <!-- External style sheet-->
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+
+        
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
+    <!-- Bootstrap core CSS -->
+  <!--<link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">-->    
+
+  
+
 
 </head>
  
