--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,7 @@
 body {
-    font-family: calibri; }
+    font-family: calibri; 
+    background-color: dark;  
+  }
   
   h1 {
     font-size: 72px;
