--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,13 @@ of the other handlebars files. They will 'inject' their HTML into the part
 of the tamplate with {{body}} --}}
 
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="title" content="Frank's Shop">
-    <meta name="description" content="Frank's Shop is an official reseller of merch released by Singer Songwriter Frank Ocean, including Hoodies, Sweatpants, and vinyl pressings.">
+    <meta name="title" content="Foil arms and Hog">
+    <meta name="description" content="Foil arms and Hog bootstrap site.">
     <meta name="author" content="Andrew Jackson">
     <title>Home - Foil Arms and Hog</title>
         <!-- Bootstrap CSS -->
@@ -35,10 +35,45 @@ of the tamplate with {{body}} --}}
 </head>
  
     <header>
-        <a href = "/">
-            <img src="/images/murphy.jpg" width="200px" alt="A lovely logo">
-        </a>
-
+        
+        <body class="bg-dark">
+  <header>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="navbar-brand" href="/"><img src="/images/murphy.jpg" width="50px" alt="A lovely logo"></a>
+            <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/about">About us</a>
+            <a class="nav-item nav-link" href="/contact">Contact us</a>
+            <a class="nav-item nav-link" href="/personlist">personlist</a>
+    
+      
+          </div>
+        </div>
+        {{!-- <div class="btn-group">
+          <button type="button" class="btn btn-primary"  id="loginlogout" href="#">Login</button>
+          <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent">
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuReference">
+            <a class="dropdown-item" href="userdetails.html">User Details</a>
+      
+          </div>
+          </div>
+            
+          <div class="btn-toolbar">
+              <a class="nav-item nav-link" href="checkout.html">
+              <button type="button" class="btn btn-secondary ml-2">
+                Checkout <span class="badge badge-light" id="checkout"></span>
+              </button>
+              </a>
+          </div>  --}}
+      </nav> 
+    </div>
    </header>
  
 <body>
