trying to get post request for addnew name to work

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@ of the tamplate with {{body}} --}}
  
     <header>
         
-        <body class="bg-dark">
+        <body class="bg-dark text-white">
   <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -76,7 +76,7 @@ of the tamplate with {{body}} --}}
     </div>
    </header>
  
-<body>
+<body class="text-white">
     {{{body}}}
     
 </body>
