added flash middleware

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -77,7 +77,18 @@ of the tamplate with {{body}} --}}
    </header>
  
 <body class="text-white">
+    {{#if flash}}
+        <div class="alert alert-dismissible alert-{{flash.type}} " role="alert">
+          <button type="button" class="btn-close" 
+            data-bs-dismiss="alert" aria-hidden="true"></button>
+          <strong>{{flash.intro}}</strong> {{{flash.message}}}
+        </div>
+      {{/if}}
+
+
+
     {{{body}}}
+    
     
 </body>
 
